# ai4kitchen

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: training.yaml
docs/: overview.md  structure.md  usage.md
scripts/: ai4kitchen_demo.ipynb  mini_train_clip.py  run_mini_training.sh  setup.sh  train.py
src/ai4kitchen/: __init__.py
src/ai4kitchen/data/: __init__.py  dataset.py  ingredients_normalization.py
src/ai4kitchen/inference/: __init__.py  pipeline.py
src/ai4kitchen/models/: __init__.py  recipe_module.py
src/ai4kitchen/training/: __init__.py  clip_finetuner.py
src/ai4kitchen/utils/: __init__.py
tests/: conftest.py  test_dataset.py  test_normalizer.py  test_structure.py
