[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4kitchen"
version = "0.1.0"
description = "Recipe generation from images using CLIP and PyTorch Lightning"
authors = [{name = "ai4kitchen Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "pytorch-lightning",
    "openai-clip @ git+https://github.com/openai/CLIP.git",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
